# HTTP

./: .gitignore  CMakeLists.txt  Doxyfile  HTTP.sln  HTTP.vcxproj  HTTP.vcxproj.filters  HTTPBuilder.cpp  HTTPBuilder.h  HTTPParser.cpp  HTTPParser.h  README.md
.github/workflows/: ci.yml
Tests/: CMakeLists.txt
Tests/data/: get_request.txt  post_request.json  post_request.txt
Tests/include/: HTTPTestUtils.h  HttpTestUtils.h
Tests/src/: HTTPBuilderTests.cpp  HTTPParserTests.cpp  HTTPResponseTests.cpp  HTTPTestUtils.cpp  HttpBuilderTests.cpp  HttpParserTests.cpp  HttpResponseTests.cpp  HttpTestUtils.cpp
docs/: _check_at_compile_time_8h.html  _check_at_compile_time_8h_source.html  _h_t_t_p_builder_8cpp.html  _h_t_t_p_builder_8cpp.js  _h_t_t_p_builder_8cpp_source.html  _h_t_t_p_builder_8h.html  _h_t_t_p_builder_8h.js  _h_t_t_p_builder_8h_source.html  _h_t_t_p_parse_exception_8cpp.html  _h_t_t_p_parse_exception_8cpp_source.html  _h_t_t_p_parse_exception_8h.html  _h_t_t_p_parse_exception_8h.js  _h_t_t_p_parse_exception_8h_source.html  _h_t_t_p_parser_8cpp.html  _h_t_t_p_parser_8cpp.js  _h_t_t_p_parser_8cpp_source.html  _h_t_t_p_parser_8h.html  _h_t_t_p_parser_8h.js  _h_t_t_p_parser_8h_source.html  _h_t_t_p_utility_8cpp.html  _h_t_t_p_utility_8cpp.js  _h_t_t_p_utility_8cpp_source.html  _h_t_t_p_utility_8h.html  _h_t_t_p_utility_8h.js  _h_t_t_p_utility_8h_source.html  _http_builder_8cpp.html  _http_builder_8cpp.js  _http_builder_8cpp_source.html  _http_parser_8cpp.html  _http_parser_8cpp.js  _http_parser_8cpp_source.html  _http_parser_exception_8cpp.html  _http_parser_exception_8cpp_source.html  _http_utility_8cpp.html  _http_utility_8cpp.js  _http_utility_8cpp_source.html  annotated.html  annotated_dup.js  class_multipart_parser-members.html  class_multipart_parser.html  (+93 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+34 more)
include/: CheckAtCompileTime.h  HTTPBuilder.h  HTTPParseException.h  HTTPParser.h  HTTPUtility.h  HttpBuilder.h  HttpParser.h  HttpParserException.h  HttpUtility.h
src/: HTTPBuilder.cpp  HTTPBuilder.h  HTTPParseException.cpp  HTTPParser.cpp  HTTPParser.h  HTTPUtility.cpp  HTTPUtility.h  HttpBuilder.cpp  HttpParser.cpp  HttpParserException.cpp  HttpUtility.cpp
